dartagnan/target/generated-sources/antlr4/dartagnan/CminParser.java
// Generated from /run/media/ael/Projects/AaltoWork/PORTHOS/dartagnan/Cmin.g4 by ANTLR 4.7

package dartagnan;
import dartagnan.program.*;
import dartagnan.expression.*;
import dartagnan.program.ProgramThread;
import java.util.HashMap;
import java.util.Map;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CminParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, COMP_OP=23, ARITH_OP=24, 
		BOOL_OP=25, DIGIT=26, WORD=27, LETTER=28, WS=29, LPAR=30, RPAR=31, LCBRA=32, 
		RCBRA=33, COMMA=34, POINT=35, EQ=36, NEQ=37, LEQ=38, LT=39, GEQ=40, GT=41, 
		ADD=42, SUB=43, MULT=44, DIV=45, MOD=46, AND=47, OR=48, ATOMIC=49;
	public static final int
		RULE_arith_expr = 0, RULE_arith_atom = 1, RULE_arith_comp = 2, RULE_bool_expr = 3, 
		RULE_bool_atom = 4, RULE_location = 5, RULE_register = 6, RULE_local = 7, 
		RULE_load = 8, RULE_store = 9, RULE_read = 10, RULE_write = 11, RULE_fence = 12, 
		RULE_mfence = 13, RULE_sync = 14, RULE_lwsync = 15, RULE_isync = 16, RULE_inst = 17, 
		RULE_atom = 18, RULE_seq = 19, RULE_if1 = 20, RULE_if2 = 21, RULE_while_ = 22, 
		RULE_program = 23;
	public static final String[] ruleNames = {
		"arith_expr", "arith_atom", "arith_comp", "bool_expr", "bool_atom", "location", 
		"register", "local", "load", "store", "read", "write", "fence", "mfence", 
		"sync", "lwsync", "isync", "inst", "atom", "seq", "if1", "if2", "while_", 
		"program"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'True'", "'true'", "'False'", "'false'", "'<-'", "'<:-'", "':='", 
		"'='", "'load'", "'store'", "'mfence'", "'sync'", "'lwsync'", "'isync'", 
		"';'", "'if'", "'then'", "'else'", "'while'", "'thread t'", "'exists'", 
		"':'", null, null, null, null, null, null, null, "'('", "')'", "'{'", 
		"'}'", "','", "'.'", "'=='", "'!='", "'<='", "'<'", "'>='", "'>'", "'+'", 
		"'-'", "'*'", "'/'", "'%'", "'and'", "'or'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "COMP_OP", 
		"ARITH_OP", "BOOL_OP", "DIGIT", "WORD", "LETTER", "WS", "LPAR", "RPAR", 
		"LCBRA", "RCBRA", "COMMA", "POINT", "EQ", "NEQ", "LEQ", "LT", "GEQ", "GT", 
		"ADD", "SUB", "MULT", "DIV", "MOD", "AND", "OR", "ATOMIC"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmin.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	private Map<String, Location> mapLocs = new HashMap<String, Location>();
	private Map<String, Map<String, Register>> mapRegs = new HashMap<String, Map<String, Register>>();

	public CminParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Arith_exprContext extends ParserRuleContext {
		public String mainThread;
		public AExpr expr;
		public Arith_atomContext e1;
		public Token op;
		public Arith_atomContext e2;
		public Arith_atomContext e;
		public List<Arith_atomContext> arith_atom() {
			return getRuleContexts(Arith_atomContext.class);
		}
		public Arith_atomContext arith_atom(int i) {
			return getRuleContext(Arith_atomContext.class,i);
		}
		public TerminalNode ARITH_OP() { return getToken(CminParser.ARITH_OP, 0); }
		public Arith_exprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Arith_exprContext(ParserRuleContext parent, int invokingState, String mainThread) {
			super(parent, invokingState);
			this.mainThread = mainThread;
		}
		@Override public int getRuleIndex() { return RULE_arith_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).enterArith_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).exitArith_expr(this);
		}
	}

	public final Arith_exprContext arith_expr(String mainThread) throws RecognitionException {
		Arith_exprContext _localctx = new Arith_exprContext(_ctx, getState(), mainThread);
		enterRule(_localctx, 0, RULE_arith_expr);
		try {
			setState(57);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				((Arith_exprContext)_localctx).e1 = arith_atom(mainThread);
				setState(50);
				((Arith_exprContext)_localctx).op = match(ARITH_OP);
				setState(51);
				((Arith_exprContext)_localctx).e2 = arith_atom(mainThread);

						((Arith_exprContext)_localctx).expr =  new AExpr(((Arith_exprContext)_localctx).e1.expr, ((Arith_exprContext)_localctx).op.getText(), ((Arith_exprContext)_localctx).e2.expr);
					
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(54);
				((Arith_exprContext)_localctx).e = arith_atom(mainThread);

						((Arith_exprContext)_localctx).expr =  ((Arith_exprContext)_localctx).e.expr;
					
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arith_atomContext extends ParserRuleContext {
		public String mainThread;
		public AExpr expr;
		public Token num;
		public RegisterContext r;
		public Arith_exprContext e;
		public TerminalNode DIGIT() { return getToken(CminParser.DIGIT, 0); }
		public RegisterContext register() {
			return getRuleContext(RegisterContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(CminParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(CminParser.RPAR, 0); }
		public Arith_exprContext arith_expr() {
			return getRuleContext(Arith_exprContext.class,0);
		}
		public Arith_atomContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Arith_atomContext(ParserRuleContext parent, int invokingState, String mainThread) {
			super(parent, invokingState);
			this.mainThread = mainThread;
		}
		@Override public int getRuleIndex() { return RULE_arith_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).enterArith_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).exitArith_atom(this);
		}
	}

	public final Arith_atomContext arith_atom(String mainThread) throws RecognitionException {
		Arith_atomContext _localctx = new Arith_atomContext(_ctx, getState(), mainThread);
		enterRule(_localctx, 2, RULE_arith_atom);
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__14:
			case COMP_OP:
			case ARITH_OP:
			case RPAR:
			case RCBRA:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case DIGIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				((Arith_atomContext)_localctx).num = match(DIGIT);
				((Arith_atomContext)_localctx).expr =  new AConst(Integer.parseInt(((Arith_atomContext)_localctx).num.getText()));
				}
				break;
			case WORD:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				((Arith_atomContext)_localctx).r = register();

						Map<String, Register> mapThreadRegs = mapRegs.get(mainThread);
						((Arith_atomContext)_localctx).expr =  mapThreadRegs.get(((Arith_atomContext)_localctx).r.reg.getName());
					
				}
				break;
			case LPAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				match(LPAR);
				setState(66);
				((Arith_atomContext)_localctx).e = arith_expr(mainThread);
				setState(67);
				match(RPAR);

						((Arith_atomContext)_localctx).expr =  ((Arith_atomContext)_localctx).e.expr;
					
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arith_compContext extends ParserRuleContext {
		public String mainThread;
		public BExpr expr;
		public Arith_exprContext a1;
		public Token op;
		public Arith_exprContext a2;
		public TerminalNode LPAR() { return getToken(CminParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(CminParser.RPAR, 0); }
		public List<Arith_exprContext> arith_expr() {
			return getRuleContexts(Arith_exprContext.class);
		}
		public Arith_exprContext arith_expr(int i) {
			return getRuleContext(Arith_exprContext.class,i);
		}
		public TerminalNode COMP_OP() { return getToken(CminParser.COMP_OP, 0); }
		public Arith_compContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Arith_compContext(ParserRuleContext parent, int invokingState, String mainThread) {
			super(parent, invokingState);
			this.mainThread = mainThread;
		}
		@Override public int getRuleIndex() { return RULE_arith_comp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).enterArith_comp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).exitArith_comp(this);
		}
	}

	public final Arith_compContext arith_comp(String mainThread) throws RecognitionException {
		Arith_compContext _localctx = new Arith_compContext(_ctx, getState(), mainThread);
		enterRule(_localctx, 4, RULE_arith_comp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(LPAR);
			setState(73);
			((Arith_compContext)_localctx).a1 = arith_expr(mainThread);
			setState(74);
			((Arith_compContext)_localctx).op = match(COMP_OP);
			setState(75);
			((Arith_compContext)_localctx).a2 = arith_expr(mainThread);
			setState(76);
			match(RPAR);

					((Arith_compContext)_localctx).expr =  new Atom(((Arith_compContext)_localctx).a1.expr, ((Arith_compContext)_localctx).op.getText(), ((Arith_compContext)_localctx).a2.expr);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bool_exprContext extends ParserRuleContext {
		public String mainThread;
		public BExpr expr;
		public Bool_atomContext b;
		public Bool_atomContext b1;
		public Token op;
		public Bool_atomContext b2;
		public List<Bool_atomContext> bool_atom() {
			return getRuleContexts(Bool_atomContext.class);
		}
		public Bool_atomContext bool_atom(int i) {
			return getRuleContext(Bool_atomContext.class,i);
		}
		public TerminalNode BOOL_OP() { return getToken(CminParser.BOOL_OP, 0); }
		public Bool_exprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Bool_exprContext(ParserRuleContext parent, int invokingState, String mainThread) {
			super(parent, invokingState);
			this.mainThread = mainThread;
		}
		@Override public int getRuleIndex() { return RULE_bool_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).enterBool_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).exitBool_expr(this);
		}
	}

	public final Bool_exprContext bool_expr(String mainThread) throws RecognitionException {
		Bool_exprContext _localctx = new Bool_exprContext(_ctx, getState(), mainThread);
		enterRule(_localctx, 6, RULE_bool_expr);
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				((Bool_exprContext)_localctx).b = bool_atom(mainThread);
				((Bool_exprContext)_localctx).expr =  ((Bool_exprContext)_localctx).b.expr;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				((Bool_exprContext)_localctx).b1 = bool_atom(mainThread);
				setState(84);
				((Bool_exprContext)_localctx).op = match(BOOL_OP);
				setState(85);
				((Bool_exprContext)_localctx).b2 = bool_atom(mainThread);

						((Bool_exprContext)_localctx).expr =  new BExpr(((Bool_exprContext)_localctx).b1.expr, ((Bool_exprContext)_localctx).op.getText(), ((Bool_exprContext)_localctx).b2.expr);
					
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bool_atomContext extends ParserRuleContext {
		public String mainThread;
		public BExpr expr;
		public Arith_compContext ae;
		public Bool_exprContext be;
		public Arith_compContext arith_comp() {
			return getRuleContext(Arith_compContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(CminParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(CminParser.RPAR, 0); }
		public Bool_exprContext bool_expr() {
			return getRuleContext(Bool_exprContext.class,0);
		}
		public Bool_atomContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Bool_atomContext(ParserRuleContext parent, int invokingState, String mainThread) {
			super(parent, invokingState);
			this.mainThread = mainThread;
		}
		@Override public int getRuleIndex() { return RULE_bool_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).enterBool_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).exitBool_atom(this);
		}
	}

	public final Bool_atomContext bool_atom(String mainThread) throws RecognitionException {
		Bool_atomContext _localctx = new Bool_atomContext(_ctx, getState(), mainThread);
		enterRule(_localctx, 8, RULE_bool_atom);
		int _la;
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==T__1) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				((Bool_atomContext)_localctx).expr =  new BConst(true);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				_la = _input.LA(1);
				if ( !(_la==T__2 || _la==T__3) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				((Bool_atomContext)_localctx).expr =  new BConst(false);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				((Bool_atomContext)_localctx).ae = arith_comp(mainThread);
				((Bool_atomContext)_localctx).expr =  ((Bool_atomContext)_localctx).ae.expr;
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				match(LPAR);
				setState(99);
				((Bool_atomContext)_localctx).be = bool_expr(mainThread);
				setState(100);
				match(RPAR);
				((Bool_atomContext)_localctx).expr =  ((Bool_atomContext)_localctx).be.expr;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocationContext extends ParserRuleContext {
		public Location loc;
		public Token l;
		public TerminalNode WORD() { return getToken(CminParser.WORD, 0); }
		public LocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_location; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).enterLocation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).exitLocation(this);
		}
	}

	public final LocationContext location() throws RecognitionException {
		LocationContext _localctx = new LocationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_location);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			((LocationContext)_localctx).l = match(WORD);
			((LocationContext)_localctx).loc =  new Location(((LocationContext)_localctx).l.getText());
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegisterContext extends ParserRuleContext {
		public Register reg;
		public Token r;
		public TerminalNode WORD() { return getToken(CminParser.WORD, 0); }
		public RegisterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_register; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).enterRegister(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).exitRegister(this);
		}
	}

	public final RegisterContext register() throws RecognitionException {
		RegisterContext _localctx = new RegisterContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_register);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			((RegisterContext)_localctx).r = match(WORD);
			((RegisterContext)_localctx).reg =  new Register(((RegisterContext)_localctx).r.getText());
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalContext extends ParserRuleContext {
		public String mainThread;
		public ProgramThread t;
		public RegisterContext r;
		public Arith_exprContext e;
		public RegisterContext register() {
			return getRuleContext(RegisterContext.class,0);
		}
		public Arith_exprContext arith_expr() {
			return getRuleContext(Arith_exprContext.class,0);
		}
		public LocalContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public LocalContext(ParserRuleContext parent, int invokingState, String mainThread) {
			super(parent, invokingState);
			this.mainThread = mainThread;
		}
		@Override public int getRuleIndex() { return RULE_local; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).enterLocal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).exitLocal(this);
		}
	}

	public final LocalContext local(String mainThread) throws RecognitionException {
		LocalContext _localctx = new LocalContext(_ctx, getState(), mainThread);
		enterRule(_localctx, 14, RULE_local);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			((LocalContext)_localctx).r = register();
			setState(112);
			match(T__4);
			setState(113);
			((LocalContext)_localctx).e = arith_expr(mainThread);

					Map<String, Register> mapThreadRegs = mapRegs.get(mainThread);
					if(!(mapThreadRegs.keySet().contains(((LocalContext)_localctx).r.reg.getName()))) {
						mapThreadRegs.put(((LocalContext)_localctx).r.reg.getName(), ((LocalContext)_localctx).r.reg);
					}
					Register pointerReg = mapThreadRegs.get(((LocalContext)_localctx).r.reg.getName());
					((LocalContext)_localctx).t =  new Local(pointerReg, ((LocalContext)_localctx).e.expr);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadContext extends ParserRuleContext {
		public String mainThread;
		public ProgramThread t;
		public RegisterContext r;
		public LocationContext l;
		public RegisterContext register() {
			return getRuleContext(RegisterContext.class,0);
		}
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public LoadContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public LoadContext(ParserRuleContext parent, int invokingState, String mainThread) {
			super(parent, invokingState);
			this.mainThread = mainThread;
		}
		@Override public int getRuleIndex() { return RULE_load; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).enterLoad(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminListener ) ((CminListener)listener).exitLoad(this);
		}
	}

	public final LoadContext load(String mainThread) throws RecognitionException {
		LoadContext _localctx = new LoadContext(_ctx, getState(), mainThread);
		enterRule(_localctx, 16, RULE_load);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			((LoadContext)_localctx).r = register();
			setState(117);
			match(T__5);
			setState(118);
			((LoadContext)_localctx).l = location();
